--- a/index.html
+++ b/index.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="main.css" />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <title>BGS BEAUTE</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="main.css" />
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  <title>BGS BEAUTE</title>
-</head>
+  <body>
+    <nav class="navbar">
+      <div class="navbar-logo">
+        <img src="./assets/logo.png" alt="" srcset="" />
+      </div>
 
-<body>
-  <nav class="navbar">
-    <div class="navbar-logo">
-      <img src="./assets/logo.png" alt="" srcset="">
-    </div>
+      <div class="navbar-items">
+        <a href="" class="navbar-item">Accueil</a>
+        <a href="" class="navbar-item">Soins</a>
+        <a href="" class="navbar-item">Realisation</a>
+        <a href="" class="navbar-item">Contact</a>
+      </div>
+      <div class="navbar-items-right">
+        <a
+          href="https://www.instagram.com/bgs.beaute/"
+          target="_blank"
+          class="navbar-item"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/audrey.bourgelas/"
+          target="_blank"
+          class="navbar-item"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+      </div>
+    </nav>
 
-    <div class="navbar-items">
-      <a href="" class="navbar-item">Accueil</a>
-      <a href="" class="navbar-item">Soins</a>
-      <a href="" class="navbar-item">Realisation</a>
-      <a href="" class="navbar-item">Contact</a>
-    </div>
-    <div class="navbar-items-right">
-      <a href="" class="navbar-item"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/audrey.bourgelas/" target="_blank" class="navbar-item"><i class="fab fa-facebook-f"></i></a>
-    </div>
+    <section></section>
 
-  </nav>
-
-
-  </section>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.0.min.js"
+      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
