--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="main.css" />
     <script
+      src="https://code.jquery.com/jquery-3.4.0.min.js"
+      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+      crossorigin="anonymous"
+    ></script>
+    <script
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" href="src/" />
+    <link rel="stylesheet" href="owl/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="owl/assets/owl.theme.default.min.css" />
+    <script src="script.js"></script>
     <title>BGS BEAUTE</title>
   </head>
 
@@ -41,12 +49,21 @@
       </div>
     </nav>
 
-    <section></section>
+    <div class="owl-carousel">
+      <div class="item">
+        <img src="https://picsum.photos/2000/3000?random=1" alt="" srcset="" />
+      </div>
+      <div class="item">
+        <img src="https://picsum.photos/2000/3000?random=2" alt="" srcset="" />
+      </div>
+      <div class="item">
+        <img src="https://picsum.photos/2000/3000?random=3" alt="" srcset="" />
+      </div>
+      <div class="item">
+        <img src="https://picsum.photos/2000/3000?random=4" alt="" srcset="" />
+      </div>
+    </div>
 
-    <script
-      src="https://code.jquery.com/jquery-3.4.0.min.js"
-      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
-      crossorigin="anonymous"
-    ></script>
+    <script src="owl/owl.carousel.min.js"></script>
   </body>
 </html>
