--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
         <img src="./assets/logo.png" alt="" srcset="" />
       </div>
 
-      <div class="navbar-items">
-        <a href="" class="navbar-item">Accueil</a>
-        <a href="" class="navbar-item">Soins</a>
-        <a href="" class="navbar-item">Realisation</a>
-        <a href="" class="navbar-item">Contact</a>
-      </div>
       <div class="navbar-items-right">
         <a
           href="https://www.instagram.com/bgs.beaute/"
@@ -48,22 +42,10 @@
         ></a>
       </div>
     </nav>
+<div class="white-separator"></div>
 
-    <div class="owl-carousel">
-      <div class="item">
-        <img src="https://picsum.photos/2000/3000?random=1" alt="" srcset="" />
-      </div>
-      <div class="item">
-        <img src="https://picsum.photos/2000/3000?random=2" alt="" srcset="" />
-      </div>
-      <div class="item">
-        <img src="https://picsum.photos/2000/3000?random=3" alt="" srcset="" />
-      </div>
-      <div class="item">
-        <img src="https://picsum.photos/2000/3000?random=4" alt="" srcset="" />
-      </div>
-    </div>
 
-    <script src="owl/owl.carousel.min.js"></script>
+
+
   </body>
 </html>
