--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-    <link rel="stylesheet" href="src/" />
-    <link rel="stylesheet" href="owl/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="owl/assets/owl.theme.default.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Arapey|Montserrat"
+      rel="stylesheet"
+    />
     <script src="script.js"></script>
     <title>BGS BEAUTE</title>
   </head>
@@ -42,10 +43,19 @@
         ></a>
       </div>
     </nav>
-<div class="white-separator"></div>
+    <div class="white-separator"></div>
 
-
-
-
+    <section class="content-container">
+      <div class="content-label">
+        <h1 class="content-title">Bgs Beauté</h1>
+        <h2 class="content-subtitle">
+          Estheticienne en ongles
+        </h2>
+        <button class="contact-button">Me Contacter</button>
+      </div>
+      <div class="content-image">
+        <img src="https://picsum.photos/id/237/600/600" alt="" srcset="" />
+      </div>
+    </section>
   </body>
 </html>
