Added second section

--- a/index.html
+++ b/index.html
@@ -47,15 +47,31 @@
 
     <section class="content-container">
       <div class="content-label">
-        <h1 class="content-title">Bgs Beauté</h1>
-        <h2 class="content-subtitle">
+        <h1 class="content-title">BGS Beauté</h1>
+        <h4 class="content-subtitle">
           Estheticienne en ongles
-        </h2>
-        <button class="contact-button">Me Contacter</button>
+        </h4>
+        <button class="contact-button" onclick=location.href='https://www.facebook.com/audrey.bourgelas/'>Me Contacter</button>
       </div>
       <div class="content-image">
-        <img src="https://picsum.photos/id/237/600/600" alt="" srcset="" />
+        <img src="/assets/beautiful-blur-care-887352.png" alt="" srcset="" />
       </div>
+    </section>
+
+    <section class="content-container">
+      <div class="content-image">
+        <img src="/assets/nails.png" alt="" srcset="" />
+      </div>
+      <div class="content-label">
+        <h1 class="content-title">Liste de prix</h1>
+        <h4 class="content-subtitle">
+          Recouvrement ongles naturel 15$
+        </h4>
+        <h4 class="content-subtitle">
+          Pose prothèses 20$
+        </h4>
+      </div>
+      
     </section>
   </body>
 </html>
