Added contact section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <a
           href="https://www.instagram.com/bgs.beaute/"
           target="_blank"
-          class="navbar-item"
-          ><i class="fab fa-instagram"></i
+          class="navbar-item link"
+          ><i class="fab fa-instagram fa-2x"></i
         ></a>
         <a
           href="https://www.facebook.com/audrey.bourgelas/"
           target="_blank"
-          class="navbar-item"
-          ><i class="fab fa-facebook-f"></i
+          class="navbar-item link"
+          ><i class="fab fa-facebook-f fa-2x"></i
         ></a>
       </div>
     </nav>
@@ -71,7 +71,24 @@
           Pose prothèses 20$
         </h4>
       </div>
-      
+    </section>
+
+    <section class="content-container">
+      <div class="content-label" id="content-contact">
+        <h1 class="content-title">Contact</h1>
+        <h4 class="content-subtitle">
+          (438)880-2087
+        </h4>
+        <h4 class="content-subtitle">
+          <a class="link" target="_blank" href="https://www.instagram.com/bgs.beaute/">Instagram</a>
+        </h4>
+        <h4 class="content-subtitle">
+          <a class="link" target="_blank" href="https://www.facebook.com/audrey.bourgelas/">Facebook</a>
+        </h4>
+      </div>
+      <div class="content-image">
+        <img src="/assets/coffee.png" alt="" srcset="" />
+      </div>
     </section>
   </body>
 </html>
