Bigger FAB Icons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+
     <nav class="navbar">
       <div class="navbar-logo">
         <img src="./assets/logo.png" alt="" srcset="" />
@@ -51,7 +52,7 @@
         <h4 class="content-subtitle">
           Estheticienne en ongles
         </h4>
-        <button class="contact-button" onclick=location.href='https://www.facebook.com/audrey.bourgelas/'>Me Contacter</button>
+        <button class="contact-button" onclick=location.href='#content-contact'>Me Contacter</button>
       </div>
       <div class="content-image">
         <img src="/assets/beautiful-blur-care-887352.png" alt="" srcset="" />
