--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <button class="contact-button" onclick=location.href='#content-contact'>Me Contacter</button>
       </div>
       <div class="content-image">
-        <img src="/assets/beautiful-blur-care-887352.png" alt="" srcset="" />
+        <img src="/assets/lovenails.webp" alt="" srcset="" />
       </div>
     </section>
 
     <section class="content-container">
       <div class="content-image">
-        <img src="/assets/nails.png" alt="" srcset="" />
+        <img src="/assets/nails.webp" alt="" srcset="" />
       </div>
       <div class="content-label">
         <h1 class="content-title">Liste de prix</h1>
@@ -88,7 +88,7 @@
         </h4>
       </div>
       <div class="content-image">
-        <img src="/assets/coffee.png" alt="" srcset="" />
+        <img src="/assets/coffee.webp" alt="" srcset="" />
       </div>
     </section>
   </body>
