Added Cursor pointer and phone link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h4 class="content-subtitle">
           Estheticienne en ongles
         </h4>
-        <button class="contact-button" onclick=location.href='#content-contact'>Me Contacter</button>
+        <button class="contact-button"  onclick=location.href='#content-contact'>Me Contacter</button>
       </div>
       <div class="content-image">
         <img src="/assets/lovenails.webp" alt="" srcset="" />
@@ -79,7 +79,7 @@
       <div class="content-label" id="content-contact">
         <h1 class="content-title">Contact</h1>
         <h4 class="content-subtitle">
-          (438)880-2087
+          <a class='link' href="tel:+4388802087">(438)880-2087</a>
         </h4>
         <h4 class="content-subtitle">
           <a class="link" target="_blank" href="https://www.instagram.com/bgs.beaute/">Instagram</a>
